# boilerplate

./: .eslintignore  .gitignore  .prettierignore  Cargo.toml  README.md  docker-compose.yaml  nx.json  package-lock.json  package.json  tsconfig.base.json
apps/api/: webpack.config.js
apps/api-e2e/: project.json
apps/api/src/: main.ts
apps/api/src/app/: app.module.ts  response.interceptor.ts
apps/http/: jest.config.ts  project.json  webpack.config.js
apps/http-e2e/: jest.config.ts  project.json
apps/http-e2e/src/support/: global-teardown.ts
apps/http/src/app/: app.module.ts  error.filter.ts
apps/rest/: jest.config.ts  project.json
apps/rest-e2e/: jest.config.ts  project.json
apps/rest-e2e/src/support/: global-setup.ts
apps/rest/src/: api-schema.decorator.ts  main.ts
apps/rest/src/app/: app.module.ts  error.filter.ts
libs/: project.json
libs/configs/: jest.config.ts  project.json
libs/configs/src/prisma/: index.ts  prisma.postgre.service.ts
libs/domain/: jest.config.ts
libs/domain/src/user/: user.service.spec.ts  user.service.ts
libs/rs/: Cargo.toml  project.json
libs/rs/src/: lib.rs  util.rs
libs/rs/src/tests/: mod.rs  util_test.rs
libs/rs/src/user/: impl.rs  mod.rs  struct.rs
libs/service/: README.md  jest.config.ts  project.json
libs/service/src/: index.ts
libs/service/src/auth/: auth.module.ts  auth.service.ts
libs/service/src/lib/: service.module.ts
libs/services/: jest.config.ts
libs/services/src/user/: user.service.spec.ts
libs/src/: consts.ts  custom.error.ts  index.ts
prisma/postgre/: schema.prisma
(+25 files in other folders)
