[package]
name = "rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "0.2.91"
chrono = "0.4.34"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
