[package]
name = "rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "0.2.91"
chrono = "0.4.34"
getrandom = { version = "0.2.12", features = ["js"] }


[dependencies.uuid]
version = "1.7.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
